# foopy

./: .gitignore  pyproject.toml
foopy/nfldata/: __init__.py  abbrs.json  config.json  idmap.py  nfldata.py  playermap.py
foopy/nfldata/cols/: __init__.py  _create.py  _create_globals.py  draft.py  map.py  pbp.py  player.py  roster.py  schedule.py
foopy/nflweek/: __init__.py  nflweek.py  years.json
foopy/tests/test_maps/: create_tests.py  test_idmap.py
foopy/tests/test_maps/data/: map1-map.csv
foopy/tests/test_maptize/: __init__.py  create_tests.py  test_idmap.py
foopy/tests/test_maptize/test_maps/: map1-demap.csv  map1-map.csv  map2-demap.csv  map2-map.csv
